--- a/app/app/views/quotes/_form.html.erb
+++ b/app/app/views/quotes/_form.html.erb
@@ -1,3 +1,5 @@
+<%# app/views/quotes/_form.html.erb %>
+
 <%= simple_form_for quote, html: { class: "quote form" } do |f| %>
   <% if quote.errors.any? %>
     <div class="error-message">
