--- a/app/app/views/quotes/index.html.erb
+++ b/app/app/views/quotes/index.html.erb
@@ -5,7 +5,10 @@
     <h1>Quotes</h1>
     <%= link_to "New quote",
                 new_quote_path,
-                class: "btn btn--primary" %>
+                class: "btn btn--primary"
+                #, data: { turbo: false }
+
+    %>
   </div>
 
   <%= render @quotes %>
