--- a/webapp/app/views/quotes/edit.html.erb
+++ b/webapp/app/views/quotes/edit.html.erb
@@ -1,3 +1,5 @@
+<% # app/views/quotes/edit.html.erb %>
+
 <main class="container">
   <%= link_to sanitize("&larr; Back to quote"), quote_path(@quote) %>
 
@@ -5,5 +7,7 @@
     <h1>Edit quote</h1>
   </div>
 
-  <%= render "form", quote: @quote %>
+  <%= turbo_frame_tag "quote_#{@quote.id}" do %>
+    <%= render "form", quote: @quote %>
+  <% end %>
 </main>
