--- a/webapp/app/views/quotes/index.html.erb
+++ b/webapp/app/views/quotes/index.html.erb
@@ -1,18 +1,18 @@
 <main class="container">
 
-  <%= turbo_frame_tag "first_turbo_frame" do %>
+  <%#= turbo_frame_tag "first_turbo_frame" do %>
     <div class="header">
       <h1>Quotes</h1>
       <%= link_to "New quote", new_quote_path,
-        #    data: { turbo_frame: "second_frame" },
-      #      data: { turbo_frame: "_top" },
+            data: { turbo_frame: "second_frame" },
+      #      data: { turbo_frame: "_top" }, # cosi sostituisce TUTTO e non solo il secondo frame
             class: "btn btn--primary"
       %>
     </div>
-  <% end %>
+  <% #end %>
 
-  <%= turbo_frame_tag "second_frame" do %>
+  <%#= turbo_frame_tag "second_frame" do %>
     <%= render @quotes %>
-  <% end %>
+  <%# end %>
 
 </main>
