--- a/webapp/app/views/quotes/new.html.erb
+++ b/webapp/app/views/quotes/new.html.erb
@@ -5,7 +5,8 @@
     <h1>New quote</h1>
   </div>
 
-  <%= turbo_frame_tag "first_turbo_frame" do %>
+  <%#= turbo_frame_tag "first_turbo_frame" do %>
     <%= render "form", quote: @quote %>
   <% end %>
+
 </main>
