Add Turbo Frames for creating new quotes and CSS fixes

--- a/webapp/app/views/layouts/application.html.erb
+++ b/webapp/app/views/layouts/application.html.erb
@@ -17,4 +17,10 @@
       v<%= APP_VERSION %> - ENV=<%= Rails.env %>
     </footer>
   </body>
+
+  <script type="module">
+    // copied from here: https://www.skypack.dev/view/@hotwired/turbo
+    // import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo';
+  </script>
+
 </html>
