--- a/webapp/app/views/quotes/_form.html.erb
+++ b/webapp/app/views/quotes/_form.html.erb
@@ -1,4 +1,4 @@
-<%# app/views/quotes/_form.html.erb %>
+<% # app/views/quotes/_form.html.erb %>
 
 <%= simple_form_for quote, html: { class: "quote form" } do |f| %>
   <% if quote.errors.any? %>
@@ -8,5 +8,6 @@
   <% end %>
 
   <%= f.input :name, input_html: { autofocus: true } %>
+  <%= link_to "Cancel", quotes_path, class: "btn btn--light" %>
   <%= f.submit class: "btn btn--secondary" %>
 <% end %>
