copy nearly finished

--- a/quote-editor/app/assets/stylesheets/application.sass.scss
+++ b/quote-editor/app/assets/stylesheets/application.sass.scss
@@ -1,1 +1,24 @@
 // Entry point for your Sass build
+
+// app/assets/stylesheets/application.sass.scss
+
+// Mixins
+@import "mixins/media";
+
+// Configuration
+@import "config/reset";
+@import "config/variables";
+
+// Components
+@import "components/btn";
+@import "components/error_message";
+@import "components/footer2"; // create by ricc
+@import "components/form";
+@import "components/quote";
+@import "components/turbo_progress_bar";
+@import "components/visually_hidden";
+
+// Layouts
+@import "layouts/container";
+@import "layouts/header";
+@import "layouts/footer"; // create by ricc
