Enable real-time updates with Turbo Streams via WebSocket

--- a/quote-editor/app/views/quotes/index.html.erb
+++ b/quote-editor/app/views/quotes/index.html.erb
@@ -1,5 +1,8 @@
 <% # app/views/quotes/index.html.erb %>
 
+<!-- Subscribe to quotes via Turbo Streams (WEBSocket) -->
+<%= turbo_stream_from "quotes" %>
+
 <div class="container">
   <div class="header">
     <h1>Quotes</h1>
