--- a/quote-editor/app/assets/builds/application.css
+++ b/quote-editor/app/assets/builds/application.css
@@ -195,6 +195,29 @@ h1 {
   border-color: var(--color-primary);
 }
 
+.navbar {
+  display: flex;
+  align-items: center;
+  box-shadow: var(--shadow-large);
+  padding: var(--space-xs) var(--space-m);
+  margin-bottom: var(--space-xxl);
+  background-color: var(--color-white);
+}
+.navbar__brand {
+  font-weight: bold;
+  font-size: var(--font-size-xl);
+  color: var(--color-text-header);
+}
+.navbar__name {
+  font-weight: bold;
+  margin-left: auto;
+  margin-right: var(--space-s);
+  color: var(--color-text-header);
+}
+.navbar__right {
+  margin-left: auto;
+}
+
 .quote {
   display: flex;
   justify-content: space-between;
