--- a/quote-editor/app/assets/stylesheets/application.sass.scss
+++ b/quote-editor/app/assets/stylesheets/application.sass.scss
@@ -12,8 +12,9 @@
 // Components
 @import "components/btn";
 @import "components/error_message";
-@import "components/footer2"; // create by ricc
+@import "components/footer2"; // created by ricc
 @import "components/form";
+@import "components/navbar";
 @import "components/quote";
 @import "components/turbo_progress_bar";
 @import "components/visually_hidden";
@@ -21,4 +22,4 @@
 // Layouts
 @import "layouts/container";
 @import "layouts/header";
-@import "layouts/footer"; // create by ricc
+@import "layouts/footer"; // created by ricc
