--- a/quote-editor/app/assets/builds/application.css
+++ b/quote-editor/app/assets/builds/application.css
@@ -1,3 +1,11 @@
+@keyframes appear-then-fade {
+  0%, 100% {
+    opacity: 0;
+  }
+  5%, 60% {
+    opacity: 1;
+  }
+}
 *,
 *::before,
 *::after {
@@ -160,6 +168,28 @@ a:hover, a:focus, a:active {
   background-color: var(--color-primary-bg);
   padding: var(--space-xs);
   border-radius: var(--border-radius);
+}
+
+.flash {
+  position: fixed;
+  top: 5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--space-s);
+  max-width: 100%;
+  width: max-content;
+  padding: 0 var(--space-m);
+}
+.flash__message {
+  font-size: var(--font-size-s);
+  color: var(--color-white);
+  padding: var(--space-xs) var(--space-m);
+  background-color: var(--color-dark);
+  animation: appear-then-fade 4s both;
+  border-radius: 999px;
 }
 
 .footer2 {
