Add empty state component for quotes index page

--- a/quote-editor/app/assets/builds/application.css
+++ b/quote-editor/app/assets/builds/application.css
@@ -162,6 +162,25 @@ a:hover, a:focus, a:active {
   color: var(--color-white);
 }
 
+.empty-state {
+  padding: var(--space-m);
+  border: var(--border);
+  border-style: dashed;
+  text-align: center;
+}
+.empty-state__text {
+  font-size: var(--font-size-l);
+  color: var(--color-text-header);
+  margin-bottom: var(--space-l);
+  font-weight: bold;
+}
+.empty-state--only-child {
+  display: none;
+}
+.empty-state--only-child:only-child {
+  display: revert;
+}
+
 .error-message {
   width: 100%;
   color: var(--color-primary);
