--- a/quote-editor/app/assets/stylesheets/application.sass.scss
+++ b/quote-editor/app/assets/stylesheets/application.sass.scss
@@ -12,6 +12,7 @@
 
 // Components
 @import "components/btn";
+@import "components/empty_state";
 @import "components/error_message";
 @import "components/flash";
 @import "components/footer2"; // created by ricc
