--- a/quote-editor/app/assets/builds/application.css
+++ b/quote-editor/app/assets/builds/application.css
@@ -244,6 +244,29 @@ h1 {
   border-color: var(--color-primary);
 }
 
+.line-item-date {
+  margin-top: var(--space-xl);
+  margin-bottom: var(--space-xxs);
+}
+.line-item-date__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: var(--space-xs);
+}
+.line-item-date__title {
+  font-size: var(--font-size-xl);
+}
+@media (min-width: 50rem) {
+  .line-item-date__title {
+    font-size: var(--font-size-xxl);
+  }
+}
+.line-item-date__actions {
+  display: flex;
+  gap: var(--space-xs);
+}
+
 .navbar {
   display: flex;
   align-items: center;
