--- a/quote-editor/app/views/quotes/show.html.erb
+++ b/quote-editor/app/views/quotes/show.html.erb
@@ -20,5 +20,5 @@
       <%= render @line_item_dates, quote: @quote %>
     </div>
   <% end %>
-  <%= render @line_item_dates, quote: @quote %>
+  <%#= render @line_item_dates, quote: @quote %>
 </main>
