--- a/quote-editor/app/assets/stylesheets/application.sass.scss
+++ b/quote-editor/app/assets/stylesheets/application.sass.scss
@@ -17,6 +17,7 @@
 @import "components/flash";
 @import "components/footer2"; // created by ricc
 @import "components/form";
+@import "components/line_item";
 @import "components/line_item_date";
 @import "components/navbar";
 @import "components/quote";
