--- a/quote-editor/app/assets/stylesheets/components/_footer2.scss
+++ b/quote-editor/app/assets/stylesheets/components/_footer2.scss
@@ -3,4 +3,9 @@
     align-items: center;
 }
 
-h1 {color: blue}
+.footer2 h1 {color: blue}
+
+
+.footer2 p {color: orange}
+
+p .footer2 {color: purple}
