--- a/quote-editor/app/views/layouts/_footer.html.erb
+++ b/quote-editor/app/views/layouts/_footer.html.erb
@@ -10,10 +10,11 @@ def rails_env_emoji
 end
 %>
 
-<footer class="footer footer2" style='font-style:bold;align:center' >
-  <b><%= APP_NAME %></b>
+<div class="ricc_footer footer2" >
+  <hr/>
+  Footer - <b><%= APP_NAME %></b>
   <b>v<%= APP_VERSION %></b>
 
   <tt><%= rails_env_emoji + Rails.env %></tt>
   <%= link_to 'Code on github','https://github.com/palladius/ricc-hotrails/' %>
-</footer>
+</div>
