--- a/quote-editor/app/assets/builds/application.css
+++ b/quote-editor/app/assets/builds/application.css
@@ -215,8 +215,16 @@ a:hover, a:focus, a:active {
   align-items: center;
 }
 
-h1 {
+.footer2 h1 {
   color: blue;
+}
+
+.footer2 p {
+  color: orange;
+}
+
+p .footer2 {
+  color: purple;
 }
 
 .form {
@@ -415,6 +423,29 @@ h1 {
   gap: var(--space-xs);
 }
 
+.quote-total {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  font-size: var(--font-size-xl);
+  font-weight: bold;
+  background-color: var(--color-white);
+  box-shadow: var(--shadow-large);
+  padding-top: var(--space-xs);
+  padding-bottom: var(--space-xs);
+}
+@media (min-width: 50rem) {
+  .quote-total {
+    padding-top: var(--space-m);
+    padding-bottom: var(--space-m);
+  }
+}
+.quote-total__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .turbo-progress-bar {
   background: linear-gradient(to right, var(--color-primary), var(--color-primary-rotate));
 }
@@ -464,7 +495,7 @@ h1 {
   color: orange;
 }
 
-.footer {
+.ricc_footer {
   display: flex;
   flex-wrap: wrap;
   gap: var(--space-s);
@@ -474,11 +505,16 @@ h1 {
   color: yellowgreen;
 }
 @media (min-width: 50rem) {
-  .footer {
+  .ricc_footer {
     margin-bottom: var(--space-xl);
   }
 }
 
-p { /* Targets all paragraph elements */
-  color: red;
+/*
+  p {  / * Targets all paragraph elements * /
+    color: red;
+  }
+*/
+.mb-xxxxl {
+  margin-bottom: var(--space-xxxxl);
 }
