--- a/quote-editor/app/assets/stylesheets/application.sass.scss
+++ b/quote-editor/app/assets/stylesheets/application.sass.scss
@@ -21,10 +21,14 @@
 @import "components/line_item_date";
 @import "components/navbar";
 @import "components/quote";
+@import "components/quote_total";
 @import "components/turbo_progress_bar";
 @import "components/visually_hidden";
 
 // Layouts
 @import "layouts/container";
 @import "layouts/header";
-@import "layouts/footer"; // created by ricc
+@import "layouts/ricc_footer"; // created by ricc
+
+// Utilities
+@import "utilities/margins";
