--- a/quote-editor/app/assets/stylesheets/layouts/_ricc_footer.scss
+++ b/quote-editor/app/assets/stylesheets/layouts/_ricc_footer.scss
@@ -1,6 +1,6 @@
 // app/assets/stylesheets/layouts/_header.scss
 
-.footer {
+.ricc_footer {
     display: flex;
     flex-wrap: wrap;
     gap: var(--space-s);
@@ -15,6 +15,8 @@
     }
   }
 
-  p {  /* Targets all paragraph elements */
+  /*
+  p {  / * Targets all paragraph elements * /
     color: red;
   }
+*/
