--- a/quote-editor/app/views/quotes/show.html.erb
+++ b/quote-editor/app/views/quotes/show.html.erb
@@ -1,6 +1,6 @@
 <% # app/views/quotes/show.html.erb %>
 
-<main class="container">
+<main class="container mb-xxxxl">
   <%= link_to sanitize("&larr; Back to quotes"), quotes_path %>
 
   <div class="header">
@@ -20,5 +20,6 @@
       <%= render @line_item_dates, quote: @quote %>
     </div>
   <% end %>
-  <%#= render @line_item_dates, quote: @quote %>
 </main>
+
+<%= render "quotes/total", quote: @quote %>
