--- a/quote-editor/app/assets/stylesheets/components/_quote_total.scss
+++ b/quote-editor/app/assets/stylesheets/components/_quote_total.scss
@@ -19,9 +19,15 @@
     padding-bottom: var(--space-m);
   }
 
-  &__inner {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+  // &__inner {
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: space-between;
+  // }
+}
+
+.quote-total__inner {
+//  display: flex;
+//  align-items: center;
+//  justify-content: space-between;
 }
