--- a/quote-editor/app/views/quotes/_total.html.erb
+++ b/quote-editor/app/views/quotes/_total.html.erb
@@ -13,7 +13,7 @@
 <!-- added by Riccardo - different CSS and it works -->
 <footer class="sobenme">
   <div class="sobenme__inner container">
-    <div>Total:</div>
+    <div>Total Riccardo:</div>
     <div><%= number_to_currency quote.total_price %></div>
   </div>
 </footer>
