--- a/quote-editor/app/views/layouts/application.html.erb
+++ b/quote-editor/app/views/layouts/application.html.erb
@@ -16,6 +16,6 @@
       <%= render "layouts/flash" %>
     </div>
     <%= yield %>
-    <%#= render 'layouts/footer' %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
