--- a/quote-editor/app/views/quotes/_total.html.erb
+++ b/quote-editor/app/views/quotes/_total.html.erb
@@ -4,16 +4,8 @@
 <!-- this first is invisible dunno why -->
 <footer class="quote-total">
   <div class="quote-total__inner container">
-    <div>Total:</div>
-    <div><%= number_to_currency quote.total_price %></div>
-  </div>
-</footer>
-
-
-<!-- added by Riccardo - different CSS and it works -->
-<footer class="sobenme">
-  <div class="sobenme__inner container">
-    <div>Total Riccardo:</div>
-    <div><%= number_to_currency quote.total_price %></div>
+    <div>Quote Total value:
+      <u><%= number_to_currency quote.total_price %></u>
+      </div>
   </div>
 </footer>
