Add MESSAGGIO_OCCASIONALE to footer and config

--- a/quote-editor/app/views/layouts/_footer.html.erb
+++ b/quote-editor/app/views/layouts/_footer.html.erb
@@ -17,4 +17,6 @@ end
 
   <tt><%= rails_env_emoji + Rails.env %></tt>
   <%= link_to 'Code on github','https://github.com/palladius/ricc-hotrails/' %>
+  <br/>
+  MESSAGGIO_OCCASIONALE=<%= MESSAGGIO_OCCASIONALE %>
 </div>
