--- a/quote-editor/app/views/layouts/_footer.html.erb
+++ b/quote-editor/app/views/layouts/_footer.html.erb
@@ -12,7 +12,7 @@ end
 
 <div class="ricc_footer footer2" >
   <hr/>
-  Footer - <b><%= APP_NAME %></b>
+  <b><%= APP_NAME %></b>
   <b>v<%= APP_VERSION %></b>
 
   <tt><%= rails_env_emoji + Rails.env %></tt>
